--- a/.github/workflows/release-testnet.yml
+++ b/.github/workflows/release-testnet.yml
@@ -9,9 +9,9 @@ jobs:
       bw-legacy: false
       build-env: "testnet"
       deploy-env: "testnet"
-      app-name: "quickstart"
-      deploy-account-address: quickstart.testnet
-      signer-account-address: quickstart.testnet
-      signer-public-key: ed25519:77s2Mq3D7t53AMgBBFj7kb2cWSWuf1hL53sPgQ5drG9r
+      app-name: "hyperfiles"
+      deploy-account-address: hyperbuild.testnet
+      signer-account-address: hyperbuild.testnet
+      signer-public-key: ed25519:EQBwYjLoAN9atRHUTV6Uubo3KWXJmAYVEA4LkwqNDuMy
     secrets:
       SIGNER_PRIVATE_KEY: ${{ secrets.TESTNET_SIGNER_PRIVATE_KEY }}
