--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:testnet": "bw ws build -n testnet"
   },
   "devDependencies": {
-    "bos-workspace": "^1.0.0-alpha",
+    "bos-workspace": "^1.0.0-alpha.15",
     "prettier": "^2.8.8"
   }
 }
